--- a/style.css
+++ b/style.css
@@ -8,68 +8,81 @@
 body {
    font-family: 'Roboto', sans-serif;
    font-size: 16px;
-   height: 100vh;
+
 }
 
-.container {
+.minMax-container {
+   display: flex;
+   width: 80%;
+   margin: 10px auto;
+}
+
+input {
+   margin: 10px;
+   padding: 5px;
+}
+
+.box {
    padding: 20px;
-   border-radius: 10px;
-   text-align: center;
-   height: 20vh;
+   width: 25%;
 }
 
-
-#surname {
-   margin: 10px 0;
-   padding: 10px 20px;
-   border-radius: 5px;
-   border: 2px solid #afeeee;
+#button-box {
+   display: flex;
+   align-items: center;
+   justify-content: center;
 }
-
-#add-surname {
-   margin: 10px 0;
-   padding: 10px 20px;
-   border-radius: 5px;
-   border: 2px solid black;
-   color: white;
-   background-color: #afeeee;
-}
-
-#add-container {
-   text-align: center;
-   margin-bottom: 20px;
-}
-
-.list-wrapper {
-   height: 80vh;
-   overflow-y: scroll;
-   position: relative;
-}
-
-
-#surname-list__header {
-   position: fixed;
-   width: calc(100% - 15px);
-
-
-}
-
-#surname-list__body ,
-#surname-list__header{
+#numbers {
    display: flex;
    flex-wrap: wrap;
    list-style-type: none;
 }
 
-
-
-#surname-list__body li,
-#surname-list__header li {
-   flex: 0 0 50%;
-   border: 1px solid black;
-   padding: 10px;
+#numbers li{
+   display: flex;
+   width: 50px;
+   height: 50px;
+   justify-content: center;
+   align-items: center;
+   font-size: 20px;
+   border: 2px solid black;
+   margin: 10px;
+   border-radius: 5px;
 }
 
-#surname-list__header li {
-   background-color: #afeeee;
+#legend {
+   padding: 0;
+   list-style-type: none;
+}
+#legend li {
+   display: flex;
+   width: 100px;
+   height: 50px;
+   border: 2px solid black;
+   border-radius: 5px;
+   margin: 10px;
+   justify-content: center;
+   align-items: center;
+}
+
+
+
+#show {
+   background-color: yellow;
+   padding: 10px 20px;
+   border-radius: 5px;
+}
+
+
+.blue,
+#both {
+   background-color: #33b5e5;
+}
+.green,
+#first {
+   background-color: #00c851;
+}
+.yellow,
+#second {
+   background-color: #ff4444;
 }
